--- a/src/vistaControl/ParqueoPublico.fxml
+++ b/src/vistaControl/ParqueoPublico.fxml
@@ -34,6 +34,7 @@
 		<!-- To add lines -->
 		<Label text="Vehículo" GridPane.halignment="CENTER" />
 		<Label text="Hora de Inicio" GridPane.columnIndex="1" GridPane.halignment="CENTER" />	
+		<Label text="Hora Final" GridPane.columnIndex="2" GridPane.halignment="CENTER" />
       <Label text="Valor a Pagar" GridPane.columnIndex="4" GridPane.halignment="CENTER" />
    </children>
 </GridPane>
